--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Apps by berrymay</title>
+		<title>Apps by huaying zhu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h1>Welcome</h1>
-									<p>Glad to hear your suggestions about all Apps by berrymay.</p>
+									<p>Glad to hear your suggestions about all Apps by huaying zhu.</p>
 									<span class="date">December 24, 2019</span>
 									<h2><a href="#">Color Calculator</h2>
 									<p>Looking for a vivid calculator app to replace your old, boring one? Then Color Calculator is the right choice! Find your favorite “fancy calculator” which is also a pretty widget app for free and a scientific calculator!</p>
