--- a/unicorncurrency.html
+++ b/unicorncurrency.html
@@ -52,7 +52,7 @@ These Services do not address anyone under the age of 13. I do not knowingly col
 Changes to This Privacy Policy
 I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
 Contact Us
-If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at huaying zhu@gmail.com.</p>
+If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at berrymay0418@foxmail.com.</p>
 							</article>
 									
 	</body>
