--- a/dailycount.html
+++ b/dailycount.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Daily Count-Remember&Reminder</title>
+		<title>Daily Countdown-Reminder&Notes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,11 +22,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Daily Count-Remember&Reminder</h2>
-									<p>huaying zhu built the Daily Count-Remember&Reminder app as a Free app. This SERVICE is provided by huaying zhu at no cost and is intended for use as is.
+									<h2>Daily Countdown-Reminder&Notes</h2>
+									<p>huaying zhu built the Daily Countdown-Reminder&Notes app as a Free app. This SERVICE is provided by huaying zhu at no cost and is intended for use as is.
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
 If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
-The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Daily Count-Remember&Reminder  unless otherwise defined in this Privacy Policy.
+The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Daily Countdown-Reminder&Notes  unless otherwise defined in this Privacy Policy.
 Information Collection and Use
 For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
 The app does use third party services that may collect information used to identify you.
