--- a/index.html
+++ b/index.html
@@ -82,6 +82,27 @@
 										<li><a href="unicorncurrency.html" class="button">Privacy Policy</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date">July 03, 2020</span>
+										<h2><a href="#">Super Calculator</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/supercalculator.png" alt="" /></a>
+									<p>Super Calculator - The Basic & Scientific Calculator with powerful math calculation and complex mathematical equation display. Also, The real-time currency Calculator with more than 150 currencies.</p>
+
+										<p>SUPER FEATURES IN CALCULATOR</p>
+										<p>• TOTALLY FREE: Download free, No Ads and Unlimited use for iPad and iPhone with Rotation</p>
+										<p>• From basic calculation(+, -, x, ÷, %) to advanced scientific calculation(xʸ, √, Sin, Cos, Log, x!,…)</p>
+										<p>• Support display Complex Expression with result</p>
+										<p>• Calculate with Degrees or Radians</p>
+										<p>• Multitasking(Split View) in iPad</p>
+										<p>• Real-time synchronization-exchange rates when connected to the internet</p>
+										<p>• Dark theme for low light conditions</p>
+										<p>• MULTIPLE LANGUAGES: English, Chinese(Simplified & Traditional), Spanish, French, German, Japanese, Korean, Portuguese</p>
+									<ul class="actions special">
+										<li><a href="supercalculator.html" class="button">Privacy Policy</a></li>
+									</ul>
+								</article>
 							</section>
 
 	</body>
