add terms for super calculator
add terms for super calculator

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 									<ul class="actions special">
 										<li><a href="supercalculator.html" class="button">Privacy Policy</a></li>
 									</ul>
+									<ul class="actions special">
+										<li><a href="supercalculator_terms.html" class="button">Terms Of Use</a></li>
+									</ul>
 								</article>
 							</section>
 
