--- a/colorcalculator.html
+++ b/colorcalculator.html
@@ -53,14 +53,15 @@ Changes to This Privacy Policy
 I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
 Contact Us
 If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at berrymay0418@foxmail.com.</p>
-</article>
-<h2>CREDITS</h2>
-<a href="https://www.freepik.com/vectors/love">Love vector created by freepik - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/christmas-pack">Christmas pack vector created by freepik - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/background">Background vector created by rawpixel.com - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/design">Design vector created by freepik - www.freepik.com</a>
-<a href="https://www.freepik.com/vectors/label">Label vector created by freepik - www.freepik.com</a>							
+<h4>CREDITS</h4>
+<a href="https://www.freepik.com/vectors/love">Love vector created by freepik - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/christmas-pack">Christmas pack vector created by freepik - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/background">Background vector created by rawpixel.com - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/design">Design vector created by freepik - www.freepik.com<br></a>
+<a href="https://www.freepik.com/vectors/label">Label vector created by freepik - www.freepik.com<br></a>	
+</article>						
 	</body>
+
 </html>		
