--- a/index.html
+++ b/index.html
@@ -5,108 +5,381 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Apps by huaying zhu</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+	<title>Apps by Wuhan Ananta Technology Co., Ltd.</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<!-- 添加自定义样式 -->
+	<style>
+		/* Fix top header spacing and remove gray line */
+		#main>.post.featured {
+			padding: 1.5em 0 1em 0 !important;
+			/* Reduced padding */
+			margin-bottom: 0 !important;
+			/* Remove bottom margin */
+			border-bottom: none !important;
+			/* Remove border */
+		}
 
-				<!-- Main -->
-					<div id="main">
+		#main>.post.featured header.major {
+			padding-bottom: 0 !important;
+			margin-bottom: 0 !important;
+		}
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h1>Welcome</h1>
-									<p>Glad to hear your suggestions about all Apps by huaying zhu.</p>
-									<span class="date">December 24, 2019</span>
-									<h2><a href="#">Color Calculator</h2>
-									<p>Looking for a vivid calculator app to replace your old, boring one? Then Color Calculator is the right choice! Find your favorite “fancy calculator” which is also a pretty widget app for free and a scientific calculator!</p>
+		#main>.post.featured header.major h1 {
+			margin-bottom: 0.3em !important;
+		}
 
-									<p>Download the latest color calculator with delicate patterns and fantastic themes! Beautify your phone with this useful and stylish calculator for free!</p>
-								</header>
-								<a href="#" class="image main"><img src="images/colorcalculator.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="colorcalculator.html" class="button large">Privacy Policy</a></li>
-								</ul>
-							</article>
+		#main>.post.featured header.major p {
+			margin-bottom: 0 !important;
+		}
 
-							<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">March 05, 2020</span>
-										<h2><a href="#">Daily Count</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/dailycount.png" alt="" /></a>
-									<p>Track every event you care.</p>
-									
-									<p>Count years, months, weeks, days, hours, minutes and even seconds.
-									Schedule notifications to alert you at accurate time.
-									Customize with your own wallpaper or photo.</p>
-									<ul class="actions special">
-										<li><a href="dailycount.html" class="button">Privacy Policy</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">September 24, 2019</span>
-										<h2><a href="#">Unicorn Currency<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/unicorncurrency.png" alt="" /></a>
-									<p>Looking for a unique dreamy currency calculator with modern fashion? Yes, 🦄  'Unicorn Currency'✨ is right for you.</p>
+		/* Apply proper top spacing to posts grid */
+		#main>.posts {
+			display: grid !important;
+			grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)) !important;
+			gap: 2em !important;
+			width: 100% !important;
+			max-width: 1200px !important;
+			margin: 2em auto 2em !important;
+			/* Added bottom margin */
+			padding: 1em 1.5em 1.5em !important;
+			/* Added top and bottom padding */
+			position: relative !important;
+			/* For absolute positioning context */
+		}
 
-										<p>🦄 Fabulous kawaii/cool/beautiful/fashionable themes for girls, boys, ladies and gentlemen!</p>
-										<p>🦄 Adorable unicorns on screen!</p>
-										<p>🦄 Rainbow colors for free!</p>
-										<p>🦄 Vivid widget for any occasion!</p>
-										<p>🦄 Amazing smart transaction!</p>
-										<p>🦄 Exclusive assistant while traveling!</p>
-										<p>🦄 Pretty glitter currency calculator!</p>
-										<p>🦄 Sparkly currency app!</p>
-										<p>🦄 Ideal tool for for everyday!</p>
+		/* Create extra space for shadows */
+		#main>.posts::before,
+		#main>.posts::after {
+			content: '';
+			display: block;
+			height: 12px;
+			/* Height for shadows */
+			width: 100%;
+			position: absolute;
+			left: 0;
+			pointer-events: none;
+		}
 
-									<p>What are you waiting for! Just download 🦄 'Unicorn Currency'✨ with no doubt, and forget about those old boring currency calculators. Now you’ll have the prettiest currency calculator that is fun and easy to use!</p>
+		#main>.posts::before {
+			top: -8px;
+			/* Space for top shadows */
+		}
 
-									<p>Choose from varies of unicorn theme backgrounds and enjoy using your new currency app! Complete your collection of stylish unicorn skins with a marvelous unicorn, while 🦄'Unicorn Currency'✨ will make you happier to solve math and currency problems.</p>
+		#main>.posts::after {
+			bottom: -8px;
+			/* Space for bottom shadows */
+		}
 
-									<p>Try out the 🦄'Unicorn Currency'✨ today for free, and show friends with your glittering unicorns!</p>
-									<ul class="actions special">
-										<li><a href="unicorncurrency.html" class="button">Privacy Policy</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">July 03, 2020</span>
-										<h2><a href="#">Super Calculator</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/supercalculator.png" alt="" /></a>
-									<p>Super Calculator - The Basic & Scientific Calculator with powerful math calculation and complex mathematical equation display. Also, The real-time currency Calculator with more than 150 currencies.</p>
+		#main>.posts>article {
+			width: 100% !important;
+			margin: 0 !important;
+			padding: 0 !important;
+		}
 
-										<p>SUPER FEATURES IN CALCULATOR</p>
-										<p>• TOTALLY FREE: Download free, No Ads and Unlimited use for iPad and iPhone with Rotation</p>
-										<p>• From basic calculation(+, -, x, ÷, %) to advanced scientific calculation(xʸ, √, Sin, Cos, Log, x!,…)</p>
-										<p>• Support display Complex Expression with result</p>
-										<p>• Calculate with Degrees or Radians</p>
-										<p>• Multitasking(Split View) in iPad</p>
-										<p>• Real-time synchronization-exchange rates when connected to the internet</p>
-										<p>• Dark theme for low light conditions</p>
-										<p>• MULTIPLE LANGUAGES: English, Chinese(Simplified & Traditional), Spanish, French, German, Japanese, Korean, Portuguese</p>
-									<ul class="actions special">
-										<li><a href="supercalculator.html" class="button">Privacy Policy</a></li>
-									</ul>
-									<ul class="actions special">
-										<li><a href="supercalculator_terms.html" class="button">Terms Of Use</a></li>
-									</ul>
-								</article>
-							</section>
+		.app-card {
+			border-radius: 12px;
+			box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
+			transition: transform 0.2s ease, box-shadow 0.2s ease;
+			overflow: hidden;
+			margin-bottom: 0;
+			/* 移除底部边距，由网格间距控制 */
+			display: flex;
+			flex-direction: column;
+			background-color: #fff;
+			padding: 1.5em;
+			/* Increased padding */
+			width: 100%;
+			height: 100%;
+			/* 确保卡片高度一致 */
+		}
 
-	</body>
+		.app-card:hover {
+			transform: translateY(-3px);
+			box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+		}
+
+		.app-image-container {
+			margin-bottom: 1.2em;
+			/* Increased bottom margin */
+			align-self: center;
+		}
+
+		.app-image {
+			width: 100%;
+			/* 宽度设为100% */
+			height: auto;
+			/* 高度自适应 */
+			max-height: 180px;
+			/* 限制最大高度 */
+			object-fit: cover;
+			border-radius: 10px;
+			/* Slightly reduced to avoid edge issues */
+			margin: 0;
+		}
+
+		.app-content {
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			min-width: 0;
+			padding: 0 0.5em;
+			/* Added horizontal padding */
+		}
+
+		.app-header {
+			margin-bottom: 1em;
+			/* Increased space */
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+		}
+
+		.app-title {
+			font-size: 1.3em;
+			margin: 0 0 0.3em 0;
+			/* Slightly increased margin */
+			color: #333;
+			font-weight: 600;
+		}
+
+		.app-description {
+			color: #666;
+			line-height: 1.5;
+			margin-bottom: 1em;
+			/* Increased margin */
+			overflow: visible;
+			display: block;
+		}
+
+		.app-features {
+			margin: 0.8em 0;
+			/* Increased margin */
+		}
+
+		.app-feature {
+			margin-bottom: 0.6em;
+			/* Increased margin */
+			position: relative;
+			padding-left: 1.2em;
+			font-size: 0.9em;
+			color: #666;
+		}
+
+		.app-feature:before {
+			content: "•";
+			position: absolute;
+			left: 0;
+			color: #4e4852;
+		}
+
+		.button-container {
+			margin-left: auto;
+			margin-top: auto;
+			/* Changed from fixed value to auto to push to bottom */
+			display: flex;
+			flex-direction: column;
+			align-items: flex-end;
+			padding-left: 1em;
+			flex: 0 0 auto;
+			padding-bottom: 0.3em;
+			/* Added padding at bottom */
+		}
+
+		.button-container .button {
+			font-size: 0.75em;
+			padding: 0.8em 0.8em;
+			/* 调整内边距 */
+			margin-bottom: 0.5em;
+			/* Increased margin bottom */
+			background-color: #f5f5f5;
+			color: #666;
+			border: none;
+			border-radius: 6px;
+			white-space: nowrap;
+			display: inline-flex;
+			/* 改为inline-flex */
+			align-items: center;
+			/* 垂直居中 */
+			justify-content: center;
+			/* 水平居中 */
+			min-width: auto;
+			text-align: center;
+			line-height: 1;
+			/* 设置为1 */
+			height: auto;
+			/* 自动高度 */
+		}
+
+		.button-container .button:last-child {
+			margin-bottom: 0.3em;
+			/* Increased margin to last button */
+		}
+
+		.button-container .button:hover {
+			background-color: #e0e0e0;
+		}
+
+		/* 移除或修改冲突的媒体查询 */
+		@media screen and (max-width: 736px) {
+			#main>.posts {
+				grid-template-columns: 1fr !important;
+				padding: 1em 1em 1.5em !important;
+				/* Consistent padding on mobile */
+				margin-top: 1.5em !important;
+				margin-bottom: 1.5em !important;
+				/* Added bottom margin for mobile */
+			}
+
+			.app-card {
+				padding: 1.2em;
+				/* Increased padding for mobile */
+			}
+
+			.button-container {
+				margin-left: 0;
+				margin-top: 1.2em;
+				/* Keep fixed top margin for mobile */
+				flex-direction: row;
+				width: 100%;
+				justify-content: flex-end;
+				padding-bottom: 0.4em;
+				/* Added padding for mobile */
+			}
+
+			.button-container .button {
+				margin-bottom: 0;
+				margin-left: 0.8em;
+				/* Increased margin between buttons */
+				margin-right: 0.4em;
+				/* Increased right margin */
+			}
+		}
+	</style>
+
+</head>
+
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper" class="fade-in">
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h1>Welcome</h1>
+					<p>Glad to hear your suggestions about all Apps by Wuhan Ananta Technology Co., Ltd.</p>
+				</header>
+			</article>
+
+			<!-- Posts -->
+			<section class="posts">
+				<article class="app-card">
+					<div class="app-image-container">
+						<img src="images/colorcalculator.png" alt="Color Calculator" class="app-image" />
+					</div>
+					<div class="app-content">
+						<div class="app-header">
+							<h2 class="app-title">Color Calculator</h2>
+							<!-- <span class="app-date">December 24, 2019</span> -->
+						</div>
+						<div class="app-description">
+							<p>Looking for a vivid calculator app to replace your old, boring one? Then Color Calculator
+								is the right choice! Find your favorite "fancy calculator" which is also a pretty widget
+								app for free and a scientific calculator!</p>
+						</div>
+					</div>
+					<div class="button-container">
+						<a href="colorcalculator.html" class="button">Privacy</a>
+					</div>
+				</article>
+
+				<article class="app-card">
+					<div class="app-image-container">
+						<img src="images/dailycount.png" alt="Daily Count" class="app-image" />
+					</div>
+					<div class="app-content">
+						<div class="app-header">
+							<h2 class="app-title">Daily Count</h2>
+							<!-- <span class="app-date">March 05, 2020</span> -->
+						</div>
+						<div class="app-description">
+							<p>Track every event you care.</p>
+							<div class="app-features">
+								<p class="app-feature">Count years, months, weeks, days, hours, minutes and even
+									seconds.</p>
+								<p class="app-feature">Schedule notifications to alert you at accurate time.</p>
+								<p class="app-feature">Customize with your own wallpaper or photo.</p>
+							</div>
+						</div>
+					</div>
+					<div class="button-container">
+						<a href="dailycount.html" class="button">Privacy</a>
+					</div>
+				</article>
+
+				<article class="app-card">
+					<div class="app-image-container">
+						<img src="images/unicorncurrency.png" alt="Unicorn Currency" class="app-image" />
+					</div>
+					<div class="app-content">
+						<div class="app-header">
+							<h2 class="app-title">Unicorn Currency</h2>
+							<!-- <span class="app-date">September 24, 2019</span> -->
+						</div>
+						<div class="app-description">
+							<p>Looking for a unique dreamy currency calculator with modern fashion? Yes, 🦄 'Unicorn
+								Currency'✨ is right for you.</p>
+							<div class="app-features">
+								<p class="app-feature">Fabulous kawaii/cool/beautiful themes for all!</p>
+								<p class="app-feature">Adorable unicorns on screen!</p>
+								<p class="app-feature">Rainbow colors for free!</p>
+							</div>
+						</div>
+					</div>
+					<div class="button-container">
+						<a href="unicorncurrency.html" class="button">Privacy</a>
+					</div>
+				</article>
+
+				<article class="app-card">
+					<div class="app-image-container">
+						<img src="images/supercalculator.png" alt="Super Calculator" class="app-image" />
+					</div>
+					<div class="app-content">
+						<div class="app-header">
+							<h2 class="app-title">Super Calculator</h2>
+							<!-- <span class="app-date">July 03, 2020</span> -->
+						</div>
+						<div class="app-description">
+							<p>Super Calculator - The Basic & Scientific Calculator with powerful math calculation and
+								complex mathematical equation display. Also, The real-time currency Calculator with more
+								than 150 currencies.</p>
+							<div class="app-features">
+								<p class="app-feature">TOTALLY FREE: No Ads and Unlimited use</p>
+								<p class="app-feature">Basic to advanced scientific calculation</p>
+								<p class="app-feature">Support display Complex Expression with result</p>
+							</div>
+						</div>
+					</div>
+					<div class="button-container">
+						<a href="supercalculator.html" class="button">Privacy</a>
+						<a href="supercalculator_terms.html" class="button">Terms</a>
+					</div>
+				</article>
+			</section>
+		</div>
+	</div>
+</body>
+
 </html>
