--- a/index.html
+++ b/index.html
@@ -1,112 +1,78 @@
-<!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Apps by huaying zhu</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h1>Welcome</h1>
-									<p>Glad to hear your suggestions about all Apps by huaying zhu.</p>
-									<span class="date">December 24, 2019</span>
-									<h2><a href="#">Color Calculator</h2>
-									<p>Looking for a vivid calculator app to replace your old, boring one? Then Color Calculator is the right choice! Find your favorite “fancy calculator” which is also a pretty widget app for free and a scientific calculator!</p>
-
-									<p>Download the latest color calculator with delicate patterns and fantastic themes! Beautify your phone with this useful and stylish calculator for free!</p>
-								</header>
-								<a href="#" class="image main"><img src="images/colorcalculator.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="colorcalculator.html" class="button large">Privacy Policy</a></li>
-								</ul>
-							</article>
-
-							<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">March 05, 2020</span>
-										<h2><a href="#">Daily Count</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/dailycount.png" alt="" /></a>
-									<p>Track every event you care.</p>
-									
-									<p>Count years, months, weeks, days, hours, minutes and even seconds.
-									Schedule notifications to alert you at accurate time.
-									Customize with your own wallpaper or photo.</p>
-									<ul class="actions special">
-										<li><a href="dailycount.html" class="button">Privacy Policy</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">September 24, 2019</span>
-										<h2><a href="#">Unicorn Currency<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/unicorncurrency.png" alt="" /></a>
-									<p>Looking for a unique dreamy currency calculator with modern fashion? Yes, 🦄  'Unicorn Currency'✨ is right for you.</p>
-
-										<p>🦄 Fabulous kawaii/cool/beautiful/fashionable themes for girls, boys, ladies and gentlemen!</p>
-										<p>🦄 Adorable unicorns on screen!</p>
-										<p>🦄 Rainbow colors for free!</p>
-										<p>🦄 Vivid widget for any occasion!</p>
-										<p>🦄 Amazing smart transaction!</p>
-										<p>🦄 Exclusive assistant while traveling!</p>
-										<p>🦄 Pretty glitter currency calculator!</p>
-										<p>🦄 Sparkly currency app!</p>
-										<p>🦄 Ideal tool for for everyday!</p>
-
-									<p>What are you waiting for! Just download 🦄 'Unicorn Currency'✨ with no doubt, and forget about those old boring currency calculators. Now you’ll have the prettiest currency calculator that is fun and easy to use!</p>
-
-									<p>Choose from varies of unicorn theme backgrounds and enjoy using your new currency app! Complete your collection of stylish unicorn skins with a marvelous unicorn, while 🦄'Unicorn Currency'✨ will make you happier to solve math and currency problems.</p>
-
-									<p>Try out the 🦄'Unicorn Currency'✨ today for free, and show friends with your glittering unicorns!</p>
-									<ul class="actions special">
-										<li><a href="unicorncurrency.html" class="button">Privacy Policy</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">July 03, 2020</span>
-										<h2><a href="#">Super Calculator</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/supercalculator.png" alt="" /></a>
-									<p>Super Calculator - The Basic & Scientific Calculator with powerful math calculation and complex mathematical equation display. Also, The real-time currency Calculator with more than 150 currencies.</p>
-
-										<p>SUPER FEATURES IN CALCULATOR</p>
-										<p>• TOTALLY FREE: Download free, No Ads and Unlimited use for iPad and iPhone with Rotation</p>
-										<p>• From basic calculation(+, -, x, ÷, %) to advanced scientific calculation(xʸ, √, Sin, Cos, Log, x!,…)</p>
-										<p>• Support display Complex Expression with result</p>
-										<p>• Calculate with Degrees or Radians</p>
-										<p>• Multitasking(Split View) in iPad</p>
-										<p>• Real-time synchronization-exchange rates when connected to the internet</p>
-										<p>• Dark theme for low light conditions</p>
-										<p>• MULTIPLE LANGUAGES: English, Chinese(Simplified & Traditional), Spanish, French, German, Japanese, Korean, Portuguese</p>
-									<ul class="actions special">
-										<li><a href="supercalculator.html" class="button">Privacy Policy</a></li>
-									</ul>
-									<ul class="actions special">
-										<li><a href="supercalculator_terms.html" class="button">Terms Of Use</a></li>
-									</ul>
-								</article>
-							</section>
-
-	</body>
+<head>
+<title>Wuhan Ananta Technology Co., Ltd.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	    
+</head>
+<body>
+	<div class="header">
+		</div>
+		<div class="content">
+			<div class="container">
+			<div class="features-section">
+				<!-- <div class="feature-header">
+					<h2><span class="ia">Check</span> <span class="ib">out</span> <span class="ic">the</span> <span class="id">superb</span> <span class="ie">features</span></h2>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
+					</div> -->
+					<div class="features-grids">
+						<div class="feature-grid1">
+						<div class="col-md-6 feature1-grid">
+							<img src="images/ColorCalculator/screenshot.png">
+						</div>
+						<div class="col-md-6 feature2-grid">
+							<p><img src="images/ColorCalculator/icon.png" width="78" height="78" style="float:left; margin-right: 15px;" /><br></p>
+							<h3 style="color: #333; font-weight: 500; font-family: 'Raleway', sans-serif;">Color Calculator</h3>
+							<p style="color: #666; font-size: 16px; line-height: 1.6; font-family: 'Raleway', sans-serif; margin-top: 35px;">Color Calculator is a beautiful calculator app with 60+ elegant skins. Our exclusive "Dynamic Skins" create the coolest "animated calculator" on the market, with weekly updates!</p>
+							<div class="buttons1">
+							<a href="https://apps.apple.com/us/app/id1492634383"><img class="img-fluid" src="images/download_app_store.svg" alt="" style="height: 40px;"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.lancekinji.colorcalculator"><img class="img-fluid" src="images/download_play_store.png" alt="" style="height: 40px;"></a>	
+						</div>
+						</div>
+						<div class="clearfix"></div>
+						</div>
+						<div class="feature-grid2">
+						<div class="col-md-6 feature12-grid">
+							<p><img src="images/SuperCalculator/icon.png" width="78" height="78" style="float:left; margin-right: 15px;" /><br></p>
+							<h3 style="color: #333; font-weight: 500; font-family: 'Raleway', sans-serif;">Super Calculator</h3>
+							<p style="color: #666; font-size: 16px; line-height: 1.6; font-family: 'Raleway', sans-serif; margin-top: 35px;">Super Calculator is a full-featured calculator app.<br>Supports basic calculation, scientific calculation, currency conversion, and unit conversion.<br>Features voice number reading and history recording.</p>
+							<div class="buttons1">
+							<a href="https://apps.apple.com/us/app/id1521827072"><img class="img-fluid" src="images/download_app_store.svg" alt="" style="height: 40px;"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.calculatorfreeforipad.supercalculator"><img class="img-fluid" src="images/download_play_store.png" alt="" style="height: 40px;"></a>
+							</div>
+						</div>
+						<div class="col-md-6 feature1-grid">
+							<img src="images/SuperCalculator/screenshot.png">
+						</div>
+						<div class="clearfix"></div>
+						</div>
+						<div class="feature-grid3">
+						<div class="col-md-6 feature1-grid">
+							<img src="images/ColorCountdown/screenshot.png">
+						</div>
+						<div class="col-md-6 feature13-grid">
+							<p><img src="images/ColorCountdown/icon.png" width="78" height="78" style="float:left; margin-right: 15px;" /><br></p>
+							<h3 style="color: #333; font-weight: 500; font-family: 'Raleway', sans-serif;">Color Countdown</h3>
+							<p style="color: #666; font-size: 16px; line-height: 1.6; font-family: 'Raleway', sans-serif; margin-top: 35px;">Color Countdown helps you track birthday countdowns, anniversary countdowns, holiday countdowns, event countdowns, and meeting countdowns. You can also record various special days such as relationship anniversaries and coming-of-age anniversaries. Experience the precise passage of time and better manage your schedule.</p>
+							<div class="buttons1">
+							<a href="https://apps.apple.com/us/app/id1501368970"><img class="img-fluid" src="images/download_app_store.svg" alt="" style="height: 40px;"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.lancekinji.dailycount"><img class="img-fluid" src="images/download_play_store.png" alt="" style="height: 40px;"></a>
+							</div>
+						</div>
+						<div class="clearfix"></div>
+						</div>
+						<div class="clearfix"></div>
+				</div>
+				</div>
+				</div>
+		</div>
+		<div class="footer">
+	<div class="copyright" style="font-size: 15px", align="center">
+		@2025 ANANTA TECH | All Right Reversed<br>
+	</div>
+		 
+</div>
+</body>
 </html>
